src/mesa/drivers/dri/nouveau/nouveau_screen.c
@@ -93,22 +93,6 @@ nouveau_init_screen2(__DRIscreen *dri_screen)
 	if (!screen)
 		return NULL;
 
-
-        /* Compat version validation will occur at context init after
-         * _mesa_compute_version().
-         */
-        dri_screen->max_gl_compat_version = 15;
-
-        /* NV10 and NV20 can support OpenGL ES 1.0 only.  Older chips
-         * cannot do even that.
-         */
-        if ((screen->device->chipset & 0xf0) != 0x00)
-                dri_screen->max_gl_es1_version = 10;
-
-	dri_screen->driverPrivate = screen;
-	dri_screen->extensions = nouveau_screen_extensions;
-	screen->dri_screen = dri_screen;
-
 	/* Open the DRM device. */
 	ret = nouveau_device_wrap(dri_screen->fd, 0, &screen->device);
 	if (ret) {
@@ -130,6 +114,21 @@ nouveau_init_screen2(__DRIscreen *dri_screen)
 	default:
 		assert(0);
 	}
+
+	/* Compat version validation will occur at context init after
+	 * _mesa_compute_version().
+	 */
+	dri_screen->max_gl_compat_version = 15;
+
+	/* NV10 and NV20 can support OpenGL ES 1.0 only.  Older chips
+	 * cannot do even that.
+	 */
+	if ((screen->device->chipset & 0xf0) != 0x00)
+		dri_screen->max_gl_es1_version = 10;
+
+	dri_screen->driverPrivate = screen;
+	dri_screen->extensions = nouveau_screen_extensions;
+	screen->dri_screen = dri_screen;
 
 	configs = nouveau_get_configs();
 	if (!configs)
